Fix horizontal scroll

--- a/index/index.css
+++ b/index/index.css
@@ -1,3 +1,13 @@
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
+/* * {
+  max-width: 100%;
+  box-sizing: border-box;
+} */
+
 .main{          
     /* margin: 0 auto;
     width: 100%; */
